@@ -17,6 +17,7 @@
     single-click or right-click on desktop or unselected unselects
     automatic desktop drag action
     Desktop prefs added margins, desktop single click
+    add Open|Desktop Folder
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
